--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="SaraVol - Sarawak Volunteer Portal" />
     <meta property="og:description" content="Connect with meaningful volunteer opportunities in Kuching. Join local NGOs and charities to make a difference in your community." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="src/assets/placeholder-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="src/assets/placeholder-logo.png" />
   </head>
 
   <body>
