--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <meta property="og:image" content="src/assets/placeholder-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
+    <meta name="twitter:title" content="Saravol | Connecting Volunteers with NGOs" />
+    <meta name="twitter:description" content="Empowering Volunteers and NGOs. Transforming Communities" />
     <meta name="twitter:image" content="src/assets/placeholder-logo.png" />
   </head>
 
