--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <meta property="og:title" content="SaraVol - Sarawak Volunteer Portal" />
     <meta property="og:description" content="Connect with meaningful volunteer opportunities in Kuching. Join local NGOs and charities to make a difference in your community." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="src/assets/placeholder-logo.png" />
+    <meta property="og:image" content="/placeholder-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Saravol | Connecting Volunteers with NGOs" />
     <meta name="twitter:description" content="Empowering Volunteers and NGOs. Transforming Communities" />
-    <meta name="twitter:image" content="src/assets/placeholder-logo.png" />
+    <meta name="twitter:image" content="/placeholder-logo.png" />
   </head>
 
   <body>
